<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="?colorPrimary"
            android:textStyle="bold"
            android:text="@string/app_name"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="?colorPrimary"
            android:text="@string/copyright"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubtitleDefault"
                android:text="@string/la_version" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubtitleDefault"
                android:text="@string/versionName" />

    </LinearLayout>

</LinearLayout>