<?xml version="1.0" encoding="utf-8"?>
<GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:columnCount="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/big_fragment_padding" >

    <TextView
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            style="@style/TitleDelete"
            android:text="@string/la_delete_person" />

    <TextView
            android:id="@+id/tvName"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:textSize="18sp"
            android:text="Name" />

    <TextView
            android:id="@+id/tvType"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="12dp"
            android:textSize="14sp"  />

    <Button
            android:id="@+id/buCancel"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_default_height"
            android:layout_marginEnd="8dp"
            style="@style/CancelButton"
            android:text="@string/la_cancel" />

    <Button
            android:id="@+id/buDelete"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_default_height"
            android:layout_marginStart="8dp"
            style="@style/DeleteButton"
            android:text="@string/la_delete" />

</GridLayout>