<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/big_fragment_padding" >

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            style="@style/TitleDefault"
            android:text="@string/la_add_person" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp" >

        <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                style="@style/InputMultiline"
                android:hint="@string/hint_person_name" />

        <ImageView
                android:id="@+id/imgvPaste"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_paste"
                android:tint="?colorPrimary" />

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <CheckBox
                android:id="@+id/chbAssignType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                style="@style/LabelDefault"
                android:text="@string/la_assign_type" />

        <Spinner
                android:id="@+id/spAssignType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" >

        <Button
                android:id="@+id/buCancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_default_height"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                style="@style/CancelButton"
                android:text="@string/la_cancel" />

        <Button
                android:id="@+id/buAdd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_default_height"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                style="@style/ApplyButton"
                android:text="@string/la_add" />

    </LinearLayout>

</LinearLayout>