<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/big_fragment_padding" >

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                style="@style/TitleDefault"
                android:text="@string/la_confirm_update_seminar" />

        <Button
                android:id="@+id/buUpdate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_default_height"
                android:layout_marginBottom="8dp"
                style="@style/ApplyButton"
                android:text="@string/la_update_seminar_yes" />

        <Button
                android:id="@+id/buCancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_default_height"
                style="@style/CancelButton"
                android:text="@string/la_update_seminar_no" />

    </LinearLayout>

    <ProgressBar
            android:id="@+id/prbSeminarLoad"
            android:layout_width="@dimen/progressbar_default_size"
            android:layout_height="@dimen/progressbar_default_size"
            android:layout_gravity="center"
            android:theme="@style/ProgressBarTheme" />

</FrameLayout>